workshop04/fortune/fortune-network.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: mypol-netpol
    labels:
        name: mypol-netpol
spec:
    # this policy will apply to this pod
    podSelector:
        matchLabels:
            name: fortune-pod
    policyTypes:
    - Ingress
    # only allow connections for below
    ingress:
    - from:
      - podSelector:
            matchLabels:
                app: myshell
